# rust-openapi

./: db.sh
macros/: Cargo.toml
macros/src/: lib.rs  parse.rs
openapi/: Cargo.toml  ddl.sql  funcs.json  openapi.json  structs.json
openapi/src/: main.rs
parser/: Cargo.toml
parser/src/: lib.rs
parser/tests/: tests.rs
server/: Cargo.toml
server/src/: main.rs
