[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
syn = { version = "2.0.85", features = ["full"] }
quote = "1.0.37"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
regex = "1.11.1"
sqlx = { version = "0.8", features = [ "runtime-tokio","postgres" ] }
parse = { path = "../parser" }

reqwest = "0.12.9" # Check for the latest version on crates.io

[lib]
proc-macro = true

[parse]
proc-macro = true

[tests]
