[package]
name = "openapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
   reqwest = { version = "0.12.9", features = ["json"] }
   serde = { version = "1.0", features = ["derive"] }
   serde_json = "1.0"
macros = { path = "../macros" }
sqlx = { version = "0.8", features = [ "runtime-tokio","postgres" ] }
  
   tokio = { version = "1", features = ["full"] }

